--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,5 +1,5 @@
 name: Coupon Codes
-main: com.lala.CouponCodes.CouponCodes
+main: net.lala.CouponCodes.CouponCodes
 version: 2.0
 author: 'LaLa'
 commands:
