--- a/.classpath
+++ b/.classpath
@@ -7,5 +7,6 @@
 			<attribute name="javadoc_location" value="http://jd.bukkit.org/apidocs"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/Owner/Desktop/API/Vault.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
