--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,7 +1,7 @@
 name: Coupon Codes
 main: net.lala.CouponCodes.CouponCodes
-version: 2.0
-author: 'LaLa'
+version: 2.0.0
+author: LaLa
 softdepend: [Vault]
 commands:
     coupon:
