Large update, API looks good and sql methods in place.

--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -6,8 +6,7 @@ softdepend: [Vault]
 commands:
     coupon:
         description: CouponCode's main command
-        usage: |
-               /<command> help
+        usage: /<command>
 permissions:
     coupon.*:
         description: Gives access to all coupon commands
