--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -8,39 +8,18 @@ commands:
         description: CouponCode's main command
         usage: /<command>
 permissions:
-    coupon.*:
+    cc.*:
         description: Gives access to all coupon commands
         children:
-            coupon.add: true
-            coupon.redeem: true
-            coupon.remove: true
-            coupon.remove.all: true
-            coupon.renew: true
-            coupon.reload: true
-            coupon.help: true
-    coupon.remove.*:
-        description: Gives you permission to remove and remove all coupons
-        children:
-            coupon.remove: true
-            coupon.remove.all: true
+            cc.add: true
+            cc.redeem: true
+            cc.remove: true
     coupon.add:
         description: Allows you to add a coupon
         default: false
     coupon.redeem:
         description: Allows you to redeem a coupon
         default: false
-    coupon.help:
-        description: Allows you to redeem a coupon
-        default: true
     coupon.remove:
         description: Allows you to remove a coupon
-        default: false
-    coupon.remove.all:
-        description: Allows you to remove all coupons
-        default: false
-    coupon.reload:
-        description: Allows you to reload CouponCode's configuration files
-        default: false
-    coupon.renew:
-        description: Allows you to renew a coupon
         default: false
