--- a/src/config.yml
+++ b/src/config.yml
@@ -1,8 +1,8 @@
 # This is the configuration for CouponCodes
 # If you have SQLite selected, IGNORE MySQL-options
-# In order for use-economy to be true, you must have the plugin Vault installed.
-# Vault is an API that allows this plugin to interact with economy plugins easily.
-# If you do not have vault, select false for use-economy.
+# In order for use-vault to be true, you must have the plugin Vault installed.
+# Vault is an API that allows this plugin to interact with economy plugins easily as well as permission plugins for editing a user's group.
+# If you do not have vault, select false for use-vault (Defaults to false)
 sql-type: SQLite
 sql-options: [SQLite, MySQL]
 MySQL-options:
@@ -11,5 +11,5 @@ MySQL-options:
  database: CouponCodes
  username: minecraft
  password: password
-use-economy: false
+use-vault: false
 debug: false
