--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -17,6 +17,7 @@ permissions:
             cc.remove: true
             cc.list: true
             cc.reload: true
+            cc.info: true
     cc.add:
         description: Allows you to add a coupon
         default: false
@@ -31,4 +32,7 @@ permissions:
         default: false
     cc.reload:
         description: Allows you to reload the database and config.yml
+        default: false
+    cc.info:
+        description: Allows you to view information on coupons
         default: false
