--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -31,12 +31,12 @@ permissions:
     cc.list:
         description: Allows you to see a list of all the coupons
         default: false
-    cc.reload:
-        description: Allows you to reload the database and config.yml
-        default: false
     cc.info:
         description: Allows you to view information on coupons
         default: false
     cc.update:
         description: Notifies you when there is an update
+        default: false
+    cc.reload:
+        description: Allows you to reload the database
         default: false
