--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,6 +1,6 @@
 name: CouponCodes
 main: net.lala.CouponCodes.CouponCodes
-version: 2.0.6-TEST-BUILD
+version: 2.0.6
 author: mike101102
 softdepend: [Vault]
 commands:
