--- a/.classpath
+++ b/.classpath
@@ -3,10 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="C:/Users/Owner/Desktop/API/Vault.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Owner/Desktop/API/bukkit-1.1-R1.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="http://jd.bukkit.org/apidocs/"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/Owner/Desktop/API/bukkit-1.1-R4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
