update CouponCodes to version 2.1.0 and a minor fix to update detection

--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,7 +1,7 @@
 name: CouponCodes
 main: net.lala.CouponCodes.CouponCodes
-version: 2.0.9
-author: mike101102
+version: 2.1.0
+author: mike101102, eMpTy
 softdepend: [Vault]
 commands:
     c:
